--- a/style.css
+++ b/style.css
@@ -1,16 +1,7 @@
 
 body {
-   display: grid;
-   grid-template-columns: 1fr 2fr 1fr;
    font-family: Helvetica, sans-serif;
    }
-
-.container {
-  grid-area: 1 / 2 / 1 / span 1; 
-  margin: 0 auto;
-  min-width: 56.25rem;
-}
-
 
 main {
   background: #bababa;
@@ -46,7 +37,7 @@ p {
   padding: 10px;
 }
 
-
+/*
 form {
   padding: 10px;
   text-align: center;
@@ -66,13 +57,4 @@ label {
   margin-right: auto;
   width: 50%;
 }
-
-@media screen and (max-width: 390px) {
-  h1 {
-    font-size: 1.5rem; 
-  }
-  
-  body {
-    font-size: smaller;
-  }
-}
+*/
